my-test/testsuite_scan/ir/SingleSource/UnitTests/Vector/LASX/lasx-xvfmaxa_s.ll.err
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmaxa_s.c:7:3: error: use of undeclared identifier '__m256i'
    7 |   __m256i __m256i_out, __m256i_result;
      |   ^~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmaxa_s.c:8:3: error: use of undeclared identifier '__m256'
    8 |   __m256 __m256_out, __m256_result;
      |   ^~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmaxa_s.c:9:3: error: use of undeclared identifier '__m256d'
    9 |   __m256d __m256d_out, __m256d_result;
      |   ^~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmaxa_s.c:10:3: error: use of undeclared identifier 'v4u64'
   10 |   v4u64 v4u64_op0, v4u64_op1, v4u64_op2, v4u64_result;
      |   ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmaxa_s.c:11:3: error: use of undeclared identifier 'v8i32'
   11 |   v8i32 v8i32_op0, v8i32_op1, v8i32_op2, v8i32_result;
      |   ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmaxa_s.c:19:3: error: use of undeclared identifier 'v8i32_op0'
   19 |   v8i32_op0 = (v8i32){0x00000000, 0x00000000, 0x00000000, 0x00000000,
      |   ^~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmaxa_s.c:19:16: error: use of undeclared identifier 'v8i32'
   19 |   v8i32_op0 = (v8i32){0x00000000, 0x00000000, 0x00000000, 0x00000000,
      |                ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmaxa_s.c:21:3: error: use of undeclared identifier 'v8i32_op1'
   21 |   v8i32_op1 = (v8i32){0x00000015, 0x00000000, 0x00005555, 0x00005555,
      |   ^~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmaxa_s.c:21:16: error: use of undeclared identifier 'v8i32'
   21 |   v8i32_op1 = (v8i32){0x00000015, 0x00000000, 0x00005555, 0x00005555,
      |                ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmaxa_s.c:23:3: error: use of undeclared identifier 'v8i32_result'
   23 |   v8i32_result = (v8i32){0x00000015, 0x00000000, 0x00005555, 0x00005555,
      |   ^~~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmaxa_s.c:23:19: error: use of undeclared identifier 'v8i32'
   23 |   v8i32_result = (v8i32){0x00000015, 0x00000000, 0x00005555, 0x00005555,
      |                   ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmaxa_s.c:25:3: error: use of undeclared identifier '__m256_out'
   25 |   __m256_out = __lasx_xvfmaxa_s((__m256)v8i32_op0, (__m256)v8i32_op1);
      |   ^~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmaxa_s.c:25:16: error: call to undeclared function '__lasx_xvfmaxa_s'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   25 |   __m256_out = __lasx_xvfmaxa_s((__m256)v8i32_op0, (__m256)v8i32_op1);
      |                ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmaxa_s.c:25:34: error: use of undeclared identifier '__m256'
   25 |   __m256_out = __lasx_xvfmaxa_s((__m256)v8i32_op0, (__m256)v8i32_op1);
      |                                  ^~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmaxa_s.c:25:53: error: use of undeclared identifier '__m256'
   25 |   __m256_out = __lasx_xvfmaxa_s((__m256)v8i32_op0, (__m256)v8i32_op1);
      |                                                     ^~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmaxa_s.c:26:19: error: use of undeclared identifier 'v8i32_result'
   26 |   check_lasx_out(&v8i32_result, &__m256_out, sizeof(__m256_out), __FILE__, __LINE__);
      |                   ^~~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmaxa_s.c:26:34: error: use of undeclared identifier '__m256_out'
   26 |   check_lasx_out(&v8i32_result, &__m256_out, sizeof(__m256_out), __FILE__, __LINE__);
      |                                  ^~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmaxa_s.c:26:53: error: use of undeclared identifier '__m256_out'
   26 |   check_lasx_out(&v8i32_result, &__m256_out, sizeof(__m256_out), __FILE__, __LINE__);
      |                                                     ^~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LASX/lasx-xvfmaxa_s.c:28:3: error: use of undeclared identifier 'v8i32_op0'
   28 |   v8i32_op0 = (v8i32){0x00000000, 0x00000000, 0x00000000, 0x00000000,
      |   ^~~~~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
